# bootcamp_cloud_dados

./: .env  README.md  pyproject.toml
Aula_01/: README.md  app.py  index.html
Aula_02/Projeto/: README.md  main.py  main_v2.py
Aula_03/: README.md
Aula_04/: README.md
Aula_06/: README.md
Aula_07/: README.md
Aula_08/: README.md
Aula_08/src/: fetch.py  fetch_1.py  fetch_2.py  fetch_3.py
Aula_09/: README.md
